2011-03-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.7

2011-03-17  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c: Updated for crypto API
	changes.

	* gmime/gmime-multipart-signed.c: Updated for crypto API changes.

	* gmime/gmime-crypto-context.c (g_mime_crypto_context_verify): Now
	returns a GMimeSignatureList, the 'details' string was worthless
	for GpgMe backend.
	(GMimeDecryptResult): This is now a GObject.

	* gmime/gmime-pkcs7-context.c: Updated for crypto API changes.

	* gmime/gmime-gpg-context.c: Updated for crypto API changes.

	* gmime/gmime-certificate.[c,h]: New source files implementing
	Certificate and CertificateList classes.

	* gmime/gmime-signature.[c,h]: New source files implementing
	Signature and SignatureList classes.

2011-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* mono/StreamWrapper.cs (Write): Implemented.

	* mono/CryptoRecipientCollection.cs:
	* mono/SignerCollection.cs: New collections for Signers and
	CryptoRecipients.

	* mono/SignatureValidity.custom:
	* mono/DecryptionResult.custom: Don't return IEnumerators for
	signers/recipients, return the appropriate Collections instead.

2011-03-15  Jeffrey Stedfast  <fejj@novell.com>

	* mono/SignatureValidity.custom: 
	* mono/DecryptionResult.custom:
	* mono/CryptoRecipient.custom: 
	* mono/Signer.custom: New custom sources implementing enumerators
	for Signers and Recipients.

2011-03-14  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Check for glib-sharp-2.0 instead of gtk-sharp-2.0
	since we really only depend on glib-sharp. Also check for gapi-2.0
	via pkgconfig.

2011-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.6

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Treat
	EXPSIG, EXPKEYSIG, and REVKEYSIG the same as GOODSIG/BADSIG status
	messages in that all of them denote a new signer info.
