@@ -1,3 +1,9 @@
+2011-06-08  Jeffrey Stedfast  <fejj@gnome.org>
+
+	* gmime/gmime-gpg-context.c: If building on Apple, force the use
+	of our own implementation of poll() because Apple's poll() is
+	broken on some versions of MacOS.
+
 2011-03-18  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
